Fix +module selector pulling in non-dependency siblings
* Update scripts.

* Extend project API and assert.

* Add execute entry point.

* Better distinguish between steps.

* Delegate through mains.

* Add better support for execution.

* Extend readme best practice.

* Add tests for SDK scripts.

* Rework Java module.

* Rework visibility of intermediate results and clean up.

* Hide intermediate steps.

* Adjust OS-specific constants.

* Fix validation script for Windows.

* Fix path of JVM-executables.

* Attempt to support Windows.

* Create CNAME

* Hide duplicate properties file and fix Windows-specific handling.

* Attempt Windows test success.

* Add inventory and process it from execute. Tolerate namespaces.

* Add missing test civerag,

* Avoid hanging.

* More simplification.

* Attempt test fixes and reduce implicit dependency.

* Windows error fix attempt.

* See if Docker on Windows is the time eater.

* Move properties to test engine. Always store commands.

* Upload artifacts on failure.

* Reduce factory method surface.

* Factor out callback.

* Avoid relying on implicits.

* Allow overriding system configuration.

* Normalize API.

* Aim for property injection rather than hardcoding.

* Make POM resolve version from metadata.

* Refactor placement.

* Unify reading of properties.

* Inline.

* Add interface for placement.

* Rename properties.

* Clean up in the naming again.

* Do not infer module names.

* Clean up properties handling.

* Reduce API ceremony.

* Rely more on metadata.

* Fix Pom resolve.

* Add new test.

* Adjust resolution hierarchy.

* Clean up surface for inheritence.

* Fix modular placement.

* Fix modular resolve.

* Rename placement.

* Clean up resolve.

* Adjust Pom resolve.

* Normalize metadata processing.

* Remove redundant defaults.

* Put some info back into the POM.

* Add export step.

* Remove generic export in favor of processing stage results.

* Reduce surface of staging.

* Refactor modular staging.

* Co