@@ -3,27 +3,51 @@ package build.jenesis.step;
 import module java.base;
 import build.jenesis.BuildStepArgument;
 import build.jenesis.BuildStepContext;
+import build.jenesis.PathPlacement;
 
 public abstract class Java extends JdkProcessBuildStep {
 
     private static final String MODULE_PATH = "--module-path", CLASS_PATH = "--class-path";
 
-    protected boolean modular = true, jarsOnly = false;
+    protected final PathPlacement modulePath;
+    protected final boolean jarsOnly;
 
     protected Java() {
+        this(PathPlacement.CLASS_PATH, true);
+    }
+
+    protected Java(PathPlacement modulePath, boolean jarsOnly) {
         super("java", ProcessHandler.OfProcess.ofJavaHome("bin/java"));
+        this.modulePath = modulePath;
+        this.jarsOnly = jarsOnly;
     }
 
     protected Java(Function<List<String>, ? extends ProcessHandler> factory) {
+        this(factory, PathPlacement.CLASS_PATH, true);
+    }
+
+    protected Java(Function<List<String>, ? extends ProcessHandler> factory,
+                   PathPlacement modulePath,
+                   boolean jarsOnly) {
         super("java", factory);
+        this.modulePath = modulePath;
+        this.jarsOnly = jarsOnly;
     }
 
     public static Java of(String... commands) {
         return of(List.of(commands));
     }
 
+    public static Java of(PathPlacement modulePath, boolean jarsOnly, String... commands) {
+        return of(modulePath, jarsOnly, List.of(commands));
+    }
+
     public static Java of(List<String> commands) {
-        return new Java() {
+        return of(PathPlacement.CLASS_PATH, true, commands);
+    }
+
+    public static Java of(PathPlacement modulePath, boolean jarsOnly, List<String> commands) {
+        return new Java(modulePath, jarsOnly) {
             @Override
             protected CompletionStage<List<String>> commands(Executor executor,
                                                              BuildStepContext context,
@@ -37,8 +61,22 @@ public abstract class Java extends JdkProcessBuildStep {
         return of(factory, List.of(commands));
     }
 
+    public static Java of(Function<List<String>, ProcessHandler.OfProcess> factory,
+                          PathPlacement modulePath,
+                          boolean jarsOnly,
+                          String... commands) {
+        return of(factory, modulePath, jarsOnly, List.of(commands));
+    }
+
     public static Java of(Function<List<String>, ProcessHandler.OfProcess> factory, List<String> commands) {
-        return new Java(factory) {
+        return of(factory, PathPlacement.CLASS_PATH, true, commands);
+    }
+
+    public static Java of(Function<List<String>, ProcessHandler.OfProcess> factory,
+                          PathPlacement modulePath,
+                          boolean jarsOnly,
+                          List<String> commands) {
+        return new Java(factory, modulePath, jarsOnly) {
             @Override
             protected CompletionStage<List<String>> commands(Executor executor,
                                                              BuildStepContext context,
@@ -48,19 +86,10 @@ public abstract class Java extends JdkProcessBuildStep {
         };
     }
 
-    public Java modular(boolean modular) {
-        this.modular = modular;
-        return this;
-    }
-
-    public Java jarsOnly(boolean jarsOnly) {
-        this.jarsOnly = jarsOnly;
-        return this;
-    }
-
     protected abstract CompletionStage<List<String>> commands(Executor executor,
                                                               BuildStepContext context,
-                                                              SequencedMap<String, BuildStepArgument> arguments) throws IOException;
+                                                              SequencedMap<String, BuildStepArgument> arguments)
+            throws IOException;
 
     @Override
     public CompletionStage<List<String>> process(Executor executor,
@@ -75,37 +104,21 @@ public abstract class Java extends JdkProcessBuildStep {
                 for (String folder : List.of(Javac.CLASSES, Bind.RESOURCES)) {
                     Path candidate = argument.folder().resolve(folder);
                     if (Files.isDirectory(candidate)) {
-                        if (modular && Files.exists(candidate.resolve("module-info.class"))) { // TODO: multi-release?
-                            modulePath.add(candidate.toString()); // TODO: does manifest apply without jar file?
-                        } else {
-                            classPath.add(candidate.toString());
-                        }
+                        (this.modulePath.test(candidate) ? modulePath : classPath).add(candidate.toString());
                     }
                 }
             }
-            Path candidate = argument.folder().resolve(ARTIFACTS);
-            if (Files.exists(candidate)) {
-                Files.walkFileTree(candidate, new SimpleFileVisitor<>() {
-                    @Override
-                    public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                        if (modular) {
-                            try (JarFile jar = new JarFile(file.toFile(),
-                                    true,
-                                    ZipFile.OPEN_READ,
-                                    Runtime.version())) { // TODO: multi-release?
-                                if (jar.getEntry("module-info.class") != null
-                                        || jar.getManifest() != null
-                                        && jar.getManifest().getMainAttributes().getValue("Automatic-Module-Name") != null) {
-                                    modulePath.add(file.toString());
-                                    return FileVisitResult.CONTINUE;
-                                }
-                            } catch (IllegalArgumentException _) {
-                            }
+            for (String jarFolder : List.of(ARTIFACTS, DEPENDENCIES)) {
+                Path candidate = argument.folder().resolve(jarFolder);
+                if (Files.exists(candidate)) {
+                    Files.walkFileTree(candidate, new SimpleFileVisitor<>() {
+                        @Override
+                        public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                            (Java.this.modulePath.test(file) ? modulePath : classPath).add(file.toString());
+                            return FileVisitResult.CONTINUE;
                         }
-                        classPath.add(file.toString());
-                        return FileVisitResult.CONTINUE;
-                    }
-                });
+                    });
+                }
             }
             SequencedMap<String, String> folders = properties.get(entry.getKey());
             if (folders != null) {
@@ -133,6 +146,10 @@ public abstract class Java extends JdkProcessBuildStep {
                 prefixes.add(paths.getKey());
                 prefixes.add(String.join(File.pathSeparator, paths.getValue()));
             }
+        }
+        if (this.modulePath == PathPlacement.INFERRED && !modulePath.isEmpty()) {
+            prefixes.add("--add-modules");
+            prefixes.add("ALL-MODULE-PATH");
         }
         return commands(executor, context, arguments).thenApplyAsync(commands -> Stream.concat(
                 prefixes.stream(),
